--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,9 +4,9 @@
     <h1>My Cart</h1>
   </header>
 
-<% if @enhanced_cart == nil %>
-<div>Your cart is empty! Click the link below to go back to the Home page</div>
-<%= link_to 'Home', '/' %>
+<% if enhanced_cart.length == 0 %>
+  <div>Your cart is empty! Click the link below to go back to the Home page</div>
+  <%= link_to 'Home', '/' %>
 <% else %>
   <div class="panel panel-default items">
     <table class="table table-bordered">
