admin page displays number of products and categories

--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,2 +1,14 @@
 <h1>Admin::Dashboard#show</h1>
-<p>Find me in app/views/admin/dashboard/show.html.erb</p>
+
+<table style="border: 1px solid black">
+  <tr>
+    <td style="border: 1px solid black">Number of products:</td>
+    <td style="border: 1px solid black">Number of categories:</td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black"><%= @product %></td>
+    <td style="border: 1px solid black"><%= @categories %></td>
+  </tr>
+</table>
+
+
