--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,4 +1,5 @@
 <h1>Admin::Dashboard#show</h1>
+<h4> <%= link_to 'Add new Category', '/admin/categories' %></h4>
 
 <table style="border: 1px solid black">
   <tr>
